[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "fedgraph"
version = "0.0.2"
authors = [
  { name="Jiayu Chang", email="jiayuc@andrew.cmu.edu" },
]
# description = ""
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    # "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
# license = { file="LICENSE" }
keywords = ["Graph Neural Networks", "Federated Learning"]


# [project.urls]
# "Homepage" = "https://github.com/FedGraph/fedgraph"
# "Bug Tracker" = "https://github.com/FedGraph/fedgraph/issues"
requires-python = ">=3.9"
# dependencies = []


# third party tools
[tool.isort]
profile = "black"
