[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "fedgraph"
version = "0.0.4"
authors = [
  { name="Jiayu Chang", email="jiayuc@andrew.cmu.edu" },
  { name="Yuhang Yao", email="yuhangya@andrew.cmu.edu" },
]
# description = ""
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    # "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
# license = { file="LICENSE" }
keywords = ["Graph Neural Networks", "Federated Learning"]


# [project.urls]  # currently disable since sites not public, which cause trouble when uplaoding pacakge
# "Homepage" = "https://github.com/FedGraph/fedgraph"
# "Bug Tracker" = "https://github.com/FedGraph/fedgraph/issues"
requires-python = ">=3.9"
dependencies = [
    "torch-scatter>=2.0.9",
    "torch-sparse>=0.6.15",
    "torch-cluster>=1.6.0",
    "torch-spline-conv>=1.2.1",
    "torch-geometric>=2.1.0.post1"
]

[project.optional-dependencies]
dev = ["build", "mypy", "pre-commit", "pytest"]


# third party tools
[tool.isort]
profile = "black"
